--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,34 +9,8 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Móvil peque */
+/* Mobile */
 
-@media screen and (min-width: 320px){
-    body{
-        border: 0.1rem solid black;
+body{
+        border: 1rem solid black;
     }
-}
-
-/* Móvil grande y landscape */
-
-@media screen and (min-width: 480px){
-    body{
-        border: 0.1rem solid green;
-    }
-}
-
-/* Tablets */
-
-@media screen and (min-width: 768px){
-    body{
-        border: 0.1rem solid red;
-    }
-}
-
-/* Desktop */
-
-@media screen and (min-width: 1024px){
-    body{
-        border: 0.1rem solid blue;
-    }    
-}
