--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,8 +16,64 @@ header{
         height: 4rem;
     }
 
+header .content-section-icon .menu-btn{
+    display: block;
+    width: 3.5rem;
+    height: 3.5rem;
+    font-size: 2rem;
+    background-color: rgba(97, 89, 68, 2);
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 2;
+}
+
+header .content-section-icon .content-menu{
+    position: fixed;
+    z-index: 1;
+    background-color: rgb(188, 143, 143, .8);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.menu-btn:active ~ .content-menu{
+    visibility: visible;
+}
+
+header .content-section-icon .content-menu
+ul {
+    width: 40%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+header .content-section-icon .content-menu
+li {
+    list-style: none;
+    border-bottom: 0.1rem solid rgba(97, 89, 68, 2);
+}
+
+header .content-section-icon .content-menu
+a {
+    text-decoration: none;
+    font-size: 2rem;
+    color: white;
+}
+
+
+
 /* Ocultar los menús y las decisiones de los checks */
-.content-menu,
+
+/* .content-menu,
 .cta-1,
 .cta-tools,
 .cta-mkt,
@@ -25,13 +81,14 @@ header{
     visibility: hidden;
 }
 
-#menu-btn:checked ~ .content-menu,
+.menu-btn:active ~ .content-menu,
 #choice-1a:checked ~ .cta-1,
 #choice-2a:checked ~ .cta-tools,
 #choice-1b:checked ~ .cta-mkt,
 #choice-2b:checked ~ .cta-2{
     visibility: visible;
-}
+} */
+
 
 
 
