--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,23 +9,37 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:root{
+    --action-color: rgba(205, 31, 71, 1);
+    --primary-bcolor: rgba(5, 35, 63, 1);
+    --secundary-bcolor: rgba(230, 228, 228, 1);
+    --details-bcolor: rgba(99, 99, 99, 1);
+    --h-color:  rgba(230, 228, 228, 1);
+    --p-color: rgba(5, 35, 63, 1);;
+    --otherletters-color: rgba(127, 127, 127, 1);
+    --header-size: 3.5rem;
+    --border-radius: .5rem;
+}
+
 /* Mobile */
 
 header{
-        border-bottom: 0.1px solid black;
-        height: 4rem;
+        height: 6vh;
+        width: 100vw;
+        background-color: var(--primary-bcolor);
+        border-bottom: solid .1rem var(--h-color);
     }
 
 header .content-section-icon #menu-btn{
-    display: none;
+    display: none;   
 }
 
 header .content-section-icon .menu-btn{
     display: block;
     width: 3.5rem;
     height: 3.5rem;
-    font-size: 2rem;
-    background-color: rgba(97, 89, 68, 2);
+    background-color: var(--primary-bcolor);
+    color: var(--p-color);
     border-radius: 50%;
     text-align: center;
     display: flex;
@@ -35,10 +49,15 @@ header .content-section-icon .menu-btn{
     z-index: 2;
 }
 
+header .content-section-icon .icon-menu{
+    font-size: 3.5rem;
+    color: var(--action-color);
+}
+
 header .content-section-icon .content-menu{
     position: fixed;
     z-index: 1;
-    background-color: rgb(188, 143, 143, .8);
+    background-color: var(--secundary-bcolor);
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -53,27 +72,65 @@ header .content-section-icon .content-menu{
 
 header .content-section-icon .content-menu
 ul {
-    width: 40%;
+    width: 100%;
     height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    
 }
 
 header .content-section-icon .content-menu
 li {
     list-style: none;
-    border-bottom: 0.1rem solid rgba(97, 89, 68, 2);
+    border-bottom: solid .1rem var(--action-color);
+    text-align: center;
 }
 
 header .content-section-icon .content-menu
 a {
     text-decoration: none;
-    font-size: 2rem;
-    color: white;
+    font-size: 2.5rem;
+    color: var(--p-color);
 }
 
-header, main .content-tools{
-    background-color: rgba(97, 89, 68, 2);
-    color: whitesmoke;
+/* pagina de inicio */
+main .content-tools{
+    background-color: var(--primary-bcolor);
+    height: 90vh; 
+    width: 100vw;
+}
+
+main .content-tools h1{
+    color: var(--h-color);
+    font-size: var(--header-size);
+    height: 40%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+main .content-tools .content-btn{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+main .content-tools a{
+    background: var(--action-color);
+    color: var(--h-color);
+    font-weight: bold;
+    text-decoration: none;
+    height: 5rem;
+    width: 30rem;
+    border-radius: .5rem;
+    box-shadow: 0px 3px 0px var(--otherletters-color);
+    font-size: 1.8rem;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
