--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,6 +18,8 @@ html{
     --p-color: rgba(5, 35, 63, 1);;
     --otherletters-color: rgba(127, 127, 127, 1);
     --header-size: 3.5rem;
+    --sub-size: 2.5rem;
+    --p-size: 1.8rem;
     --border-radius: .5rem;
 }
 
@@ -50,7 +52,7 @@ header .content-section-icon .menu-btn{
 }
 
 header .content-section-icon .icon-menu{
-    font-size: 3.5rem;
+    font-size: var(--header-size);
     color: var(--action-color);
 }
 
@@ -90,7 +92,7 @@ li {
 header .content-section-icon .content-menu
 a {
     text-decoration: none;
-    font-size: 2.5rem;
+    font-size: var(--sub-size);
     color: var(--p-color);
 }
 
@@ -122,15 +124,71 @@ main .content-tools .content-btn{
 main .content-tools a{
     background: var(--action-color);
     color: var(--h-color);
+    font-size: var(--p-size);
     font-weight: bold;
     text-decoration: none;
     height: 5rem;
     width: 30rem;
     border-radius: .5rem;
     box-shadow: 0px 3px 0px var(--otherletters-color);
-    font-size: 1.8rem;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+main .content-tools a:hover{
+    background: var(--details-bcolor);
+    box-shadow: 0px 3px 0px var(--action-color);
+}
+
+
+/* CONTACTO */
+
+main .content-contact{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--secundary-bcolor);
+}
+
+main .content-contact .content-cap-pic{
+    width: 100vw;
+    height: 60%;
+}
+
+main .content-contact .content-cap-pic .content-pic{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .content-contact img{
+    width: 15.5rem;
+    height: 15rem;
+    border-radius: 100%;
+}
+
+main .content-contact .greetings-box{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    font-size: var(--sub-size);
+    font-weight: bold;
+    color: var(--p-color);
+}
+
+main .content-contact .caption-box{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: var(--p-size);
+    color: var(--otherletters-color);
+}
+
+/* Botones */
+
